mcp/1.7/modules/ROOT/pages/mcp-connector-upgrade-migrate.adoc
= Upgrading MCP Connector to Version 1.7


MCP Connector 0.1.0-BETA is deprecated. Use MCP Connector 1.x instead. MCP Connector 1.x is not backward-compatible with the 0.1.0-BETA version of this connector.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|1.0 |1.x
|===

== Changes in 1.7

* The MCP Java SDK is upgraded from 1.0.1 to 2.0.0. Connector operations, sources, configuration, and error types are unchanged.
* The MCP SDK's JSON provider is migrated to Jackson 3. Connector operations, sources, configuration, and error types are unchanged.
* The Streamable HTTP transport no longer leaks resources by holding open a persistent Server-Sent Events (SSE) stream for every non-initialize request. Response framing is now deferred until an outbound message is actually sent: non-eliciting requests (such as `tools/call`, `resources/read`, and `prompts/get`) return a plain `application/json` response, and an SSE stream is opened only when the server must send a server-initiated message such as an elicitation. 
+
[NOTE]
====
As part of the Streamable HTTP framing change, a request that triggers a server-initiated message (an elicitation) now requires the client to advertise the SSE channel in its `Accept` header. Clients that call such operations must send:

----
Accept: application/json, text/event-stream
----

A client that sends only `Accept: application/json` and then triggers an elicitation receives an `INVALID_REQUEST` error. Spec-conformant MCP clients already send both media types and are unaffected. If you maintain a custom MCP client, ensure it advertises `text/event-stream` on requests that might elicit.
====

== Changes in 1.6

* MCP Connector now includes the *MCP Server - Create Elicitation* operation and the *MCP Client - Elicitation Listener* source.
+
These capabilities implement the MCP elicitation protocol so servers can request additional structured input from clients during tool and resource execution.
* Elicitation is opt-in through the new *Enable Elicitations* field on the client configuration.
+
For multi-worker deployments, use Streamable HTTP server transport and configure an Object Store on the server connection so elicitation correlation is preserved across workers. SSE server transport is single-worker only.
* Server connection configuration now includes the new *Elicitation Timeout Seconds*, *Elicitations Object Store*, and *Elicitation Polling Seconds* fields to route elicitation responses across replicas.
* The *MCP Client - List Tools*, *MCP Client - List Resources*, and *MCP Client - List Prompts* operations now include the new *Additional Properties* field.
+
Pass custom headers, correlation IDs, tenant identifiers, or other metadata on list calls. The values are propagated to the corresponding server-side listeners and are accessible from `attributes.additionalProperties`.

== Changes in 1.5

* MCP Connector now includes the *MCP Client - Get Prompt* and *MCP Client - List Prompts* operations, and the *MCP Server - Prompt Listener* source. 
+
Expose server-side prompt templates with typed arguments and consume them from clients, with responses supporting text, image, embedded resource, and resource link content.
* The *MCP Client - Call Tool* operation now includes the new *Extract Structured Content* field. 
+
Define tool parameter and output schemas using either inline JSON or external files, fully supported by robust design-time schema validation. With this, the connector now also includes the new `MCP:SCHEMA_VALIDATION_FAILED` error.
* The connector now includes response attributes to support structured client-side error handling with HTTP response details. With this, the connector now also includes the new `MCP:UNAUTHORIZED` error. 

== Changes in 1.4

* The MCP Java SDK is upgraded to the latest release version (1.0.0).
* Both the server and client transports now default to 2025-06-18 as the preferred version of the protocol.
* Both the server and client transports now set the `Mcp-Protocol-Version` header to the version negotiated upon connection initialization.

== Changes in 1.3

* The *MCP Server - On New Session Listener* source now supports custom rejection headers with the new *Reject With Headers* field.

== Changes in 1.2

* MCP Connector now supports distributed tracing.

== Changes in 1.1

* A *Default Request Headers* parameter is added to both the SSE Client and Streamable Http Client connection types within the MCP Client configuration. Use this parameter to specify custom headers to send with every request to the MCP server.

== Changes in 1.0

This release contains the following changes:

* Streamable HTTP Transport
+
Support for Streamable HTTP transport is added. This transport method replaces the deprecated SSE transport for better scalability and cloud compatibility.
* Custom Response Headers 
+
Added support for custom headers on all exposed endpoints.
* Enhanced Error Handling
+
Improved error handling with specific error types and better error messages.
* Performance Improvements
+
Added caching support and timeout configurations.
* Input Validation
+
Enhanced parameter validation with JSON schema constraints.
* These new types are added:
** Call Tool Response
** Resource Content
** Resource Metadata
** Tool Metadata
** New Session Request
** Resource Request
** Text Tool Response Content
** Text Resource Tool Response Content
** Blob Resource Tool Response Content
** Blob Resource
* The `mule.http.service.implementation=NETTY` property is no longer required and must be <<remove-property,removed>>. 
* The `<mcp:resource-content>` element under `<mcp:resource-listener>` is renamed to `<mcp:resource-listener-content>`. If you used the 0.1.0-BETA version of this connector, you must manually rename the element in the connector's configuration XML.

== Removed Features

* The `<mcp:resource-capabilities>` and `<mcp:tool-capabilities>` configuration attributes are removed. 
* The `<mcp:add-dynamic-resource>` operation is removed. The MCP server always advertises itself as non-dynamic.

[[update-pom]]
== Update the POM File Dependency

If you are using MCP Connector 0.1.0-BETA, you must update your POM file dependency to:

[source,xml]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-mcp-connector</artifactId>
  <version>1.0.0</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Note that the `<groupId>com.mulesoft.connector</groupId>` is changed so that `connector` is now plural `connectors`. 


[[remove-property]]
== Remove the NETTY Property

If you used the 0.1.0-BETA version of MCP Connector and added the `-Dmule.http.service.implementation=NETTY` property, remove it anywhere you added it, including the:

* `AnypointStudio.ini` file
* Debug configuration
* Apps' properties


== See Also

* xref:mcp-connector-reference.adoc[MCP Connector Reference]
* xref:mcp-connector-examples.adoc[MCP Connector Examples]
* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
